<resources>
    <string name="app_name">一起薅羊毛</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text">text</string>
    <string name="bmob_id">9957bf15a46a8735b5bdbf9834cdb4cc</string>
    <string name="shop">商品</string>
    <string name="recommend">推荐</string>
    <string name="pc">人头车</string>
    <string name="other">其他</string>
    <string name="rb">返现</string>
    <string name="share">分享</string>
    <string name="about">有关</string>
    <string name="notice">Notice</string>
    <string name="des2">被拖下水的苦逼肥宅，服务器数据上传的主要工作，控制台的 编写，商品信息获取解析的大大工作，负责优化代码。</string>
    <string name="des">APP部分编写的工作，一直沉迷学习无法敲代码，服务器数据分类，相关界面主要设计编写。</string>
    <string name="des3">小米市场开发者提供，帮助上架小米应用市场。</string>
    <string name="ok">确定</string>
    <string name="paste">复制链接</string>
    <string name="donate">在快乐使用这个app的同时也不要忘记捐赠我们啊！一点小费将
    给予我们无限动力，也会减缓我们接入广告的进度哒。\n(｡･∀･)ﾉﾞ</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="bugly_id">2858da587f</string>
    <string name="menu_">还没预定</string>
</resources>
